fix(ui): change overflow to visible to avoid padding issues

--- a/static/css/skills.css
+++ b/static/css/skills.css
@@ -8,6 +8,7 @@
   }
 
   svg {
+    overflow: visible;
     min-width: 250px;
     max-width: 350px;
     flex: 1;
